--- a/webroot/less/forms.less
+++ b/webroot/less/forms.less
@@ -294,15 +294,18 @@ input[type="checkbox"][readonly] {
 // --------------------------
 
 // Warning
-.control-group.warning {
+.control-group.warning,
+div.input.warning {
   .formFieldState(@warningText, @warningText, @warningBackground);
 }
 // Error
-.control-group.error {
+.control-group.error,
+div.input.error {
   .formFieldState(@errorText, @errorText, @errorBackground);
 }
 // Success
-.control-group.success {
+.control-group.success,
+div.input.success {
   .formFieldState(@successText, @successText, @successBackground);
 }
 
@@ -324,7 +327,8 @@ select:focus:required:invalid {
 // FORM ACTIONS
 // ------------
 
-.form-actions {
+.form-actions,
+div.submit {
   padding: (@baseLineHeight - 1) 20px @baseLineHeight;
   margin-top: @baseLineHeight;
   margin-bottom: @baseLineHeight;
@@ -342,6 +346,8 @@ select:focus:required:invalid {
   border-color: #eee;
   .box-shadow(inset 0 1px 2px rgba(0,0,0,.025));
 }
+
+
 
 // Placeholder text gets special styles; can't be bundled together though for some reason
 .placeholder(@grayLight);
@@ -367,8 +373,6 @@ select:focus:required:invalid {
   vertical-align: middle;
   padding-left: 5px;
 }
-
-
 
 // INPUT GROUPS
 // ------------
@@ -534,7 +538,7 @@ select:focus:required:invalid {
 
 
 // Margin to space out fieldsets
-.control-group {
+.control-group, div.input {
   margin-bottom: @baseLineHeight / 2;
 }
 
@@ -549,7 +553,8 @@ legend + .control-group {
 
 .form-horizontal {
   // Increase spacing between groups
-  .control-group {
+  .control-group,
+  div.input {
     margin-bottom: @baseLineHeight;
     .clearfix();
   }
@@ -581,4 +586,19 @@ legend + .control-group {
   .form-actions {
     padding-left: 160px;
   }
+}
+
+
+
+// Added to match CakePHP's output
+/*div.input{
+  .control-group;
+}
+
+div.input.error{
+  .control-group.error;
+}
+*/
+.error-message {
+  .help-inline;
 }
