--- a/webroot/less/mixins.less
+++ b/webroot/less/mixins.less
@@ -162,7 +162,8 @@
   // Set the text color
   > label,
   .help-block,
-  .help-inline {
+  .help-inline,
+  .error-message {
     color: @textColor;
   }
   // Style inputs accordingly
