Récupération des infos depuis allociné et sortie sous forme de tableau.

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -1,3 +1,5 @@
+
+
 /*.notif{
 	.close{
 		float: right;
@@ -67,10 +69,13 @@
 	}
 }
 
-.bleh,
+
 .popover-inner{
-	width: 1000px !important;
-	height: 500px;
+	width: auto;
+	min-width:200px;
+	max-width:100%;
+	height: auto;
+	
 }
 
 /*input{
