--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -1,3 +1,6 @@
+
+@import "bootstrap.less";
+
 /*.notif{
 	.close{
 		float: right;
@@ -65,6 +68,14 @@
 
 		display: inline-block;
 	}
+}
+
+.bleh,
+.popover-inner{
+	width: auto;
+	max-width:200px;
+	max-width:1000px;
+	height: 500px;
 }
 
 /*input{
