Les infos sont récupérées et ajoutées correctement à la page. Il ne reste plus qu'à les mettre en base

--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -1,65 +1,3 @@
-
-@import "bootstrap.less";
-
-/*.notif{
-	.close{
-		float: right;
-	}
-}
-
-.error {
-	color: #fff;
-}
-
-
-.header_text(){
-	color: #fff;
-	font-weight: normal;
-	text-decoration: none;
-}
-
-#header{
-	padding: 10px 20px;
-	background: #003d4c;
-
-	#titre {
-		line-height:20px;
-		background: url('../img/cake.icon.png') no-repeat left;
-		padding: 0px 30px;
-		.header_text;	
-	}
-
-	.menu{
-	li{
-
-		list-style: none;	
-		display: inline;
-		a{
-			.header_text;
-		}
-	}
-
-	a:hover {
-		text-decoration: underline;
-	}
-}
-
-}*/
-
-/*#rech_div{
-	z-index:99; 
-	position: absolute;
-	left: 50px;
-	top: 50px;
-	width: 400px;
-	height: 800px;
-	background-color: white;
-}*/
-
-
-//@taille_btn_menu: 50px;
-
-
 .input{
 	label{
 		padding-right: 20px;
@@ -70,14 +8,13 @@
 	}
 }
 
-.bleh,
+
 .popover-inner{
 	width: auto;
-	max-width:200px;
-	max-width:1000px;
-	height: 500px;
+	min-width:200px;
+	max-width:70%;
+	height: auto;
+	min-height:100px;
+	max-height:50%;
+	
 }
-
-/*input{
-	display: inline-block;
-}*/
