La sauvegarde fonctionne, par rapport à l'édition il ne doit rester que ce qui concerne les images normalement. Début de travail sur le catalogue/index par rapport à l'aperçu.

--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -1,7 +1,21 @@
 @labelWidth: 100px;
 @labelPadding: 20px;
+@inputHeight: 28px;
+@inputWidth:220px;
+
+.hover { background-color: #eee; }
+
+input{
+	//height: @inputHeight;
+	//width: @inputWidth;
+}
+
+textarea{
+	//width: @inputWidth;
+}
 
 .input{
+
 	label{
 		padding-right: @labelPadding;
 		width: @labelWidth;
