--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -3,16 +3,23 @@
 @inputHeight: 28px;
 @inputWidth:220px;
 
+// Couleur des colonnes du tableau de vidéos dans index.
 .hover { background-color: #eee; }
 
-input{
-	//height: @inputHeight;
-	//width: @inputWidth;
+#truc{
+	@rowHeight: 35px;
+	@maxRowCount: 20;
+	min-height: @rowHeight * @maxRowCount;
+	
+}
+.almost_hide{
+	visibility: hidden;
+	display: inline
+	// button{
+	// 	height:
+	// }
 }
 
-textarea{
-	//width: @inputWidth;
-}
 
 .input{
 
@@ -33,19 +40,19 @@ textarea{
 	}
 }
 
-span.help-block{
-	padding-left: @labelWidth + @labelPadding;
-}
+// span.help-block{
+// 	padding-left: @labelWidth + @labelPadding;
+// }
 
-.popover-inner{
-	width: auto;
-	min-width:200px;
-	max-width:70%;
-	height: auto;
-	min-height:100px;
-	max-height:50%;
+// .popover-inner{
+// 	width: auto;
+// 	min-width:200px;
+// 	max-width:70%;
+// 	height: auto;
+// 	min-height:100px;
+// 	max-height:50%;
 	
-}
+// }
 
 // .container{
 // 	width: 1080px;
