Remplacement de la source des recherches de allociné en scrapping vers themoviedb.org via l'API officielle

--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -40,6 +40,24 @@
 	}
 }
 
+
+.searchResult{
+	.movie{
+		display: inline-block;
+		height: 150px;
+		
+		&.poster{
+			margin-right: 5px;
+		}
+
+		&.info{
+			padding-top: 10px;
+		}
+	}
+
+
+}
+
 // span.help-block{
 // 	padding-left: @labelWidth + @labelPadding;
 // }
