Ajout de fichiers oubliés dans le commit précédent (correction TMDb), la description des films dans le catalogue descend maintenant quand on scroll.

--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -58,6 +58,11 @@
 
 }
 
+div.fixed{
+	position: fixed;
+	top: 60px; // Pour rester sous la barre de menu
+}
+
 // span.help-block{
 // 	padding-left: @labelWidth + @labelPadding;
 // }
